# foxy

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  Dockerfile  README.md  SECURITY_MITIGATION_IMPLEMENTATION.md  commit_message.txt  validate_implementation.md
.github/: labeler.yml
.github/workflows/: auto-label.yml  auto-tag.yml  ci.yml  coverage.yml  crate.yml  docker.yml  publish.yml  test.yml
config/: default.toml  example.json  example.toml  example.yaml
docs/: CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  COVERAGE_WORKFLOW.md  EXTENSION.md  SECURITY_ASSESSMENT_REPORT.md
examples/: vault-config.json  vault_example.rs
examples/basic-proxy/: config.json  main.rs
scripts/: run-coverage.ps1  test-setup.ps1
src/: core.rs  filters.rs  lib.rs  loader.rs  router.rs  security.rs  server.rs
src/config/: env.rs  error.rs  file.rs  mod.rs  proxy.rs  tests.rs  vault.rs
src/core/: mod.rs  tests.rs
src/examples/: basic_config.rs  config.toml  loader_example.rs
src/filters/: mod.rs  tests.rs
src/loader/: mod.rs  tests.rs
src/logging/: config.rs  middleware.rs  mod.rs  structured.rs  test_logger.rs  tests.rs  wrapper.rs
src/opentelemetry/: mod.rs  tests.rs
src/router/: mod.rs  predicates.rs  tests.rs
src/security/: basic.rs  mod.rs  oidc.rs  tests.rs
src/server/: health.rs  mod.rs  swagger.rs  tests.rs
tests/: binary_integration.rs  end_to_end.rs  error_handling.rs  load_test.rs  mocking_tests.rs  real_service_integration.rs  server_integration_tests.rs  stateful_behavior.rs
tests/common/: mod.rs
tests/mocks/: mod.rs  upstream_servers.rs
tests/unit/config/: tests.rs
tests/unit/core/: tests.rs
tests/unit/filters/: tests.rs
tests/unit/loader/: tests.rs
tests/unit/logging/: tests.rs
tests/unit/router/: tests.rs
tests/unit/security/: tests.rs
tests/unit/server/: swagger_tests.rs  tests.rs
