[package]
name = "foxy-io"
version = "0.2.0"
edition = "2024"
authors = ["Johan Steffens <johan@steff.co.za>"]
description = "A configuration-driven and hyper-extensible HTTP proxy library"
license = "MPL-2.0"
repository = "https://github.com/johan-steffens/foxy"
readme = "README.md"
keywords = ["http", "proxy", "extensible", "configurable"]
categories = ["web-programming", "network-programming"]

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }

# General
env_logger = "0.11.8"
log = "0.4.27"
globset = "0.4"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.88"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Error handling
thiserror = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }
toml = "0.7"

# HTTP and networking
bytes = "1.5.0"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
http-body-util = "0.1.0"
reqwest = { version = "0.12.15", features = ["stream", "json", "rustls-tls"] }
regex = "1.11.1"
url = "2.5.4"

# Security
jsonwebtoken = "9"

# Testing utilities
tempfile = "3.6"

[features]
default = []

[lib]
name = "foxy"
path = "src/lib.rs"

[[bin]]
name = "foxy"
path = "src/bin/foxy.rs"