[package]
name = "foxy-io"
version = "0.2.12"
edition = "2024"
authors = ["Johan Steffens <johan@steff.co.za>"]
description = "A configuration-driven and hyper-extensible HTTP proxy library"
license = "MPL-2.0"
repository = "https://github.com/johan-steffens/foxy"
readme = "README.md"
keywords = ["http", "proxy", "extensible", "configurable"]
categories = ["web-programming", "network-programming"]

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }

# General
env_logger = "0.11.8"
log = "0.4.27"
globset = "0.4"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.88"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Error handling
thiserror = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }
toml = "0.7"

# HTTP and networking
bytes = "1.5.0"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
http-body-util = "0.1.0"
reqwest = { version = "0.12.15", features = ["stream", "json", "rustls-tls"] }
regex = "1.11.1"
url = "2.5.4"

# Security
jsonwebtoken = "9"

# Testing utilities
tempfile = "3.6"
once_cell = "1.21.3"

# OpenTelemetry (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry-otlp = { version = "0.29", optional = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29", optional = true, features = ["semconv_experimental"] }
opentelemetry-http = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29.0", optional = true }
tonic = { version = "0.12.3", optional = true }
hostname = { version = "0.4.1", optional = true }

[features]
default = []
opentelemetry = [
    "dep:tracing", 
    "dep:tracing-subscriber", 
    "dep:tracing-opentelemetry", 
    "dep:opentelemetry", 
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-http",
    "dep:opentelemetry_sdk",
    "dep:tonic",
    "dep:hostname",
]

[lib]
name = "foxy"
path = "src/lib.rs"

[[bin]]
name = "foxy"
path = "src/bin/foxy.rs"