[package]
name = "foxy-io"
version = "0.3.7"
edition = "2024"
authors = ["Johan Steffens <johan@steff.co.za>"]
description = "A configuration-driven and hyper-extensible HTTP proxy library"
license = "MPL-2.0"
repository = "https://github.com/johan-steffens/foxy"
readme = "README.md"
keywords = ["http", "proxy", "extensible", "configurable"]
categories = ["web-programming", "network-programming"]

[dependencies]
# General
openssl = { version = "0.10.72", features = ["vendored"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
globset = "0.4"

# Logging
env_logger = "0.11.8"
log = "0.4.27"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
chrono = "0.4.35"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.88"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }

# Error handling
thiserror = "2.0.12"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9" }
toml = "0.8.23"

# HTTP and networking
bytes = "1.5.0"
reqwest = { version = "0.12.15", default-features = false, features = ["stream", "json", "default-tls"] }
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
http-body-util = "0.1.0"
regex = "1.11.1"
base64 = "0.22.1"

# Security
jsonwebtoken = "9"

# Utilities
once_cell = "1.21.3"

# OpenTelemetry dependencies (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry-otlp = { version = "0.29", optional = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29", optional = true, features = ["semconv_experimental"] }
opentelemetry-http = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", optional = true }
tonic = { version = "0.12.3", optional = true }
hostname = { version = "0.4.1", optional = true }

[dev-dependencies]
# Testing frameworks and utilities
wiremock = "0.6"
serial_test = "3.1"
tempfile = "3.6"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
warp = "0.3"

[features]
default = []
swagger-ui = []
vault-config = []
opentelemetry = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-http",
    "dep:opentelemetry_sdk",
    "dep:tonic",
    "dep:hostname",
]

[lib]
name = "foxy"
path = "src/lib.rs"

[[bin]]
name = "foxy"
path = "src/bin/foxy.rs"